Shorten CSS styling with clamp, fix vw gap scaling with %.

--- a/src/app/home/page.module.css
+++ b/src/app/home/page.module.css
@@ -80,7 +80,7 @@
 
 .eventsContainer {
     display: flex;
-    gap: 5vw;
+    gap: 5%;
     justify-content: center;
 }
 
